<resources>
    <string name="app_name">Rumbo</string>

    <!--  Home Top Bar-->
    <string name="notice">Notice</string>
    <string name="notice1"> 43 </string>
    <string name="new_arrival">New Arrival</string>
    <string name="follow">Follow</string>

    <!--  Bottom Bar-->
    <string name="timeline">Timeline</string>
    <string name="community">Community</string>
    <string name="kakebo">Book</string>
    <string name="my_page">My Page</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expenditure">Expense</string>
    <string name="amount">Amount</string>
    <string name="edt_save_money">Save Money</string>
    <string name="save_money_and_do_what">Save money and do what</string>
    <string name="tv_title_chatwrite">Enter title</string>
    <string name="tv_name_chatwrite">Enter name</string>
    <string name="tv_price_chatwrite">Enter price</string>
    <string name="edt_commentopen_hint">Facebook announced on the 11th that it will strengthen its fact-checking system ahead of the Indian general election scheduled to be held by May. Prevent the spread of false information in the largest market for users.</string>
    <string name="reply_to_comment">Reply to comment</string>
    <string name="send">Send</string>
    <string name="bulletin_board_list">BBS list</string>
    <string name="new_arrival_order">New arrival order</string>
    <string name="popularity_order">Popularity order</string>
    <string name="tv_community">Bulletin board list</string>
    <string name="comment_concern">Comment will be posted</string>
    <string name="whatisyourconcernnow">What I am concerned about now</string>
    <string name="comment">Comment</string>
    <string name="tv_title_mypagefollow">Mochirina</string>
    <string name="household_diagnosis_post">Post to household account review</string><!--  <string name="household_diagnosis_post">家計診断 投稿する</string>-->
    <string name="profile_n_settings">Edit profile and config</string>
    <string name="calendar">Calendar</string>
    <string name="househpld_book">Booking</string>
    <string name="my_post">My posts</string>
    <string name="change_profile_photo">Change your image</string>
    <string name="preservation">Preservation</string>
    <string name="chanfe_profile_photo">Change profile photo</string>
    <string name="nickname">Nickname</string>
    <string name="edt_nickname_profsetting">Mochirina</string>
    <string name="self_intro_comment">About</string>
    <string name="edt_self_intro_hint">I recently had a child. I live with my wife and children. Thank you. I like entanglement so please talk to me.</string>
    <string name="save_money_ndo_what">What do you do to save money?？</string>
    <string name="if_it_does_movebyanychance">If it does not move by any chance</string>


             <string name="comment_number_community">151</string>
     <string name="save_money">Save money</string>
    <string name="it_is_followed_closely">I was followed by Mochirina.</string>
    <string name="lunch">Grilled meat for lunch</string>
    <string name="family_composition">Family composition</string>
    <string name="current_saving_balance">Current savings balance</string>
    <string name="annual_income">Annual Income</string>
    <string name="annual_expenditure">Annual expenditure</string>
    <string name="annual_savings_amount">Annual savings amount</string>
    <string name="your_worries_future_plans">Your worries (concerns, future plans, things you want to review, insurance consultation, etc.)</string>
    <!--  <string name="send">送信</string>-->
    <string name="post_to_household_diagnostic">Post to Household Diagnostic</string>


    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="resume_key">Enter user resume key</string>
    <string name="register_email_address">E-mail address registration</string>
    <string name="block_list">Block list</string>
    <string name="food_expenses">Food expenses</string>
    <string name="daily_necessities">Daily necessities</string>
    <string name="clothes_n_beauty">Clothes and beauty</string>
    <string name="education">Education</string>
    <string name="companionship">Companionship</string>
    <string name="entertainment">Entertainment</string>
    <string name="insurance_n_tax">Insurance, tax</string>
    <string name="transportation_n_movement">Transportation, movement</string>
    <string name="utility_expenses">Utility expenses</string>
    <string name="mobile_n_communication">Mobile and communication</string>
    <string name="residence">Residence</string>
    <string name="other">Other</string>
    <string name="please_enter_content_of_expenses">Title will be for yourself</string>
    <string name="title">Title</string>
    <!--<string name="expenditure">支出</string>-->
    <string name="circle">円</string>
    <string name="income">Income</string>
    <string name="todays_tweet">Comment</string>
    <string name="grilled_meat_for_lunch">Yakiniku for lunch!</string>
    <string name="date">Date</string>
    <string name="recommendation">Recommendation</string>
    <string name="chat">Chat</string>
    <string name="household_diagnosis">House hold account review</string>
    <string name="username">Username</string>
    <string name="profile_text">No profile indormation is added yet.</string>
    <string name="total_income">Income</string>
    <string name="total_expence">Expence</string>
    <string name="net">Total</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="household_ac_book_release">Household account book release</string>
    <string name="popup_notification">Popup notification</string>

    <string name="income_record_will_be_unpublished">Income record will be unpublished</string>
    <string name="follower">Follower</string>
    <string name="change_email_pw">Change email and password</string>
    <string name="post_comment">Post Comment</string>
    <string name="users_comment">Users Comment</string>
    <string name="are_you_sure_to_delete_comment">Are you sure to delete comment?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_register_or_login_first">Please Login or Register first</string>
    <string name="register">Register</string>
    <string name="not_now">Not Now</string>
    <string name="block_user">Block the user? once you block you can\'t undo</string>
    <string name="save">Save</string>
    <string name="introduction">Introduction</string>
    <string name="my_follow">My Follow</string>
    <string name="my_follower">My Follower</string>
    <string name="mine">Mine</string>
    <string name="all">All</string>
    <string name="email">Email</string>
    <string name="change_email_and_password">Change email and password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password_must_be_under_6_15_digits">Your password must have between 6-15 letters</string>
    <string name="password">Password</string>
    <string name="password_more_than_6_letters">Password(more than 6 letters)</string>
    <string name="change">Change</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="your_email">Your email</string>
    <string name="send_email">Send email</string>
    <string name="no_name">No Name</string>
    <string name="hello_world">Hello World!</string>
    <string name="no_profile_yet">No profile yet</string>
    <string name="thousand_yen">1000 円</string>
    <string name="yen">円</string>
    <string name="are_you_sure_to_delete_post">Are you sure to delete post</string>
    <string name="no_data_found">No data found!</string>
    <string name="register_and_try_community_hosekeep_booking">Register and try community housekeep booking</string>
    <string name="enter_your_nick_name">Enter your nick name</string>
    <string name="enter_your_introduction">Enter your introduction</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="add_photo">Add Photo!</string>
    <string name="cancel">Cancel</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="please_write_a_comment">Please write a comment</string>
    <string name="comment_sent_successfully">Comment sent successfully</string>
    <string name="comment_like_successfully">Comment like successfully</string>
    <string name="comment_unlike_successfully">Comment unlike Successfully</string>
    <string name="comment_delete_successfully">Comment delete successfully</string>
    <string name="post_delete_successfully">Post delete successfully</string>
    <string name="user_blocked_successfully">User blocked successfully</string>
    <string name="following">Following</string>
    <string name="user_added_successfully">User added successfully</string>
    <string name="user_removed_successfully">User removed successfully</string>
    <string name="no_data_found_for_this_month">No data found for this month!</string>


</resources>
