<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:id="@+id/ivCross"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="end"
        android:src="@mipmap/cross"
        android:tint="@color/caldroid_555" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/are_you_sure_to_delete_comment"
        android:textSize="17dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvYes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/yes"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/tvNo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/no"
            android:textSize="17dp" />
    </LinearLayout>
</LinearLayout>