<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Profile_and_Settings_Frag">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:id="@+id/rel_top_settings"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:elevation="5sp">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:src="@mipmap/back"
        android:layout_marginLeft="10sp"/>

        <TextView
            android:id="@+id/tv_profile_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/tab_selected"
            android:layout_centerVertical="true"
            android:text="@string/profile_n_settings"
            android:layout_centerHorizontal="true"></TextView>

        <TextView
            android:id="@+id/tv_preservation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/save"
             android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/tab_selected"
            android:layout_marginRight="20sp"></TextView>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_below="@+id/rel_top_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rel_user_profile_intro"
        android:layout_below="@+id/rel_top_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15sp"
        android:paddingBottom="2dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_user_profile_pic"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_margin="5sp"
        android:src="@mipmap/image_dummy"
        android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvChangeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/change_profile_photo"
            android:textColor="@color/tab_text_color"
            android:layout_below="@+id/civ_user_profile_pic"/>

    </RelativeLayout>
    
    <LinearLayout
        android:layout_below="@+id/rel_user_profile_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="39px"
        android:layout_marginRight="39px">

        <TextView
            android:id="@+id/tv_nick_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:layout_marginBottom="38px"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            app:counterMaxLength="20">
            <EditText
                android:id="@+id/edt_nick_name"
                android:layout_width="match_parent"
                android:layout_marginTop="10sp"
                android:paddingTop="10sp"
                android:singleLine="true"
                android:paddingBottom="10sp"
                android:paddingLeft="12sp"
                android:maxLength="10"
                android:hint="@string/edt_nickname_profsetting"
                android:background="@drawable/small_yellow_round_corner_bg"
                android:layout_height="match_parent"/>
        </android.support.design.widget.TextInputLayout>



        <TextView
            android:id="@+id/tv_self_intro_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introduction"
            android:layout_marginBottom="38px"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            app:counterMaxLength="100">
            <EditText
                android:id="@+id/edt_self_intro_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_self_intro_hint"
                android:background="@drawable/small_yellow_round_corner_bg"
                android:gravity="top"
                android:maxLength="100"
                android:minLines="6"
                android:paddingBottom="10sp"
                android:padding="12sp"/>

        </android.support.design.widget.TextInputLayout>



        <TextView
            android:id="@+id/tvEditEmail"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rect_grey"
            android:text="@string/change_email_pw"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/tab_text_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5sp"
            android:padding="10sp"
            android:visibility="gone"
            android:layout_margin="10sp">

            <TextView
                android:id="@+id/tv_reg_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_email_address"
                android:gravity="left"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_next_arrow"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10sp"
                android:padding="5sp"
                android:layout_centerVertical="true"
                android:tint="@color/caldroid_darker_gray" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5sp"
            android:padding="10sp"
            android:visibility="gone"
            android:layout_margin="10sp">

            <TextView
                android:id="@+id/tv_resume_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/resume_key"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_next_arrow"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10sp"
                android:padding="5sp"
                android:tint="@color/caldroid_darker_gray"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5sp"
            android:visibility="gone"
            android:padding="10sp"
            android:layout_margin="10sp">

            <TextView
                android:id="@+id/tv_blocklist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/block_list"
                android:gravity="left"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_next_arrow"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10sp"
                android:padding="5sp"
                android:tint="@color/caldroid_darker_gray"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="10sp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                android:id="@+id/tv_publify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/household_ac_book_release"
                android:layout_marginBottom="10sp" />

       <Switch
           android:id="@+id/swich_publify"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:checked="true"
           android:layout_below="@+id/tv_publify"
           android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/tv_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_notification"
                android:layout_marginBottom="10sp" />


            <Switch
                android:id="@+id/swich_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_below="@id/tv_notify"
                android:layout_gravity="center" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>