<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
    android:padding="10dp"

    >

    <ImageView
        android:id="@+id/img_down_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="4dp"
        android:src="@mipmap/downarrow"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/tv_bullet_board"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/bulletin_board_list"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/tab_select_bg"
        android:textColor="@color/white"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_new_arrival_order"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/new_arrival_order"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_popularity_order"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/popularity_order"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"/>



</LinearLayout>
