<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="wrap_content"
    android:layout_height="250dp"
    android:layout_margin="7dp"
    android:background="@drawable/heart_community_bg"

    android:id="@+id/lin_community_adapter"


    >

    <ImageView
        android:id="@+id/img_money"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:src="@drawable/moneyyy"
        android:scaleType="fitXY"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:text="@string/save_money_and_do_what"
        android:layout_marginBottom="5dp"

       />

    <TextView
        android:id="@+id/tv_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/if_it_does_movebyanychance"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tv_comment_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity= "end"
        android:text="@string/comment_number_community"
        android:drawableLeft="@drawable/ic_bubble"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:drawablePadding="5sp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
       >

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12/10/2012"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10:12"/>
    </LinearLayout>

</LinearLayout>